fix dropdown menu z-index

--- a/frontend/src/components/search/search-filters/index.css
+++ b/frontend/src/components/search/search-filters/index.css
@@ -52,6 +52,10 @@
   width: 100%;
 }
 
+.search-filter-menu {
+  z-index: 1050;
+}
+
 .search-filter-menu .dropdown-item {
   position: relative;
   display: flex;
